# personal-stock

./: .gitignore  README.md  pyproject.toml  requirements.txt  usage.md
.github/workflows/: portfolio-summary.yml
app/: TUNING_GUIDE.md  extract.py  hyperparameter_tuning.py  macros.py  main.py  predictions.py  run_data_extraction.py  run_model_training.py  run_predictions.py  run_simulations.py  run_tuning.py  stock_pipeline.py  tickerfetch.py  train_model_new.py  usage.md
artifacts/: best_rf_model.joblib  model_metadata.json
data-prep/: augment.py  full_pipeline.txt  main.py  predictions.py  run_comparison.py  sample.ipynb  stock_pipeline.py  technicals.py  test_pipe.txt  tickerfetch.py  train.txt  train_model copy.py  train_model.py  train_model_new.py
decision-notebooks/: make_decisions.ipynb  model-drift.ipynb  model-simulations.ipynb
eda-notebooks/: data_eda.ipynb  data_prep.ipynb  make_decisions.ipynb  make_predictions.ipynb  ml_train.ipynb  predictions-eda.ipynb
notebooks/: calculate_summary.ipynb  calculate_trades.ipynb  data_prep.ipynb  gspread.ipynb  ibkr.ipynb  ticker_universe.ipynb
portfolio-manage/: log-journal.py  log-trades.py  portfolio-alerts.py  portfolio-positions-manage.py
results/: action_plan_20250913_1314.txt  action_plan_20250913_1338.txt  action_plan_20250914_1528.txt  action_plan_20250914_1532.txt
scripts/: log-journal copy.txt  send-summary.py
