[project]
name = "personal-stock"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gdown>=5.2.0",
    "gspread>=6.2.1",
    "gspread-dataframe>=4.0.0",
    "ib-insync>=0.9.86",
    "jupyter>=1.1.1",
    "nest-asyncio>=1.6.0",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "python-dotenv>=1.1.0",
    "yfinance>=0.2.63",
]
