[project]
name = "personal-stock"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastparquet>=2024.11.0",
    "gdown>=5.2.0",
    "gspread>=6.2.1",
    "gspread-dataframe>=4.0.0",
    "ib-insync>=0.9.86",
    "joblib>=1.5.2",
    "jupyter>=1.1.1",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.3",
    "nest-asyncio>=1.6.0",
    "numpy>=2.3.1",
    "optuna>=4.5.0",
    "pandas>=2.3.0",
    "pandas-datareader>=0.10.0",
    "plotly>=6.3.0",
    "pyarrow>=20.0.0",
    "python-dotenv>=1.1.0",
    "requests-cache>=1.2.1",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
    "ta-lib>=0.6.4",
    "tqdm>=4.67.1",
    "xgboost>=3.0.4",
    "yfinance>=0.2.63",
]
